--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,35 @@
 		<!-- Dependency for Spring Test to be added -->
 
 		<dependency>
+		    <groupId>jstl</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
+		
+		
+		<!-- Dependency for jaxb-api to be added(if using JDK9) -->
+		
+		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
+		
+
+		<!-- Dependency for jaxb-impl to be added(if using JDK9) -->
+		
+		<!-- https://mvnrepository.com/artifact/javax.xml/jaxb-impl -->
+		<dependency>
+		    <groupId>javax.xml</groupId>
+		    <artifactId>jaxb-impl</artifactId>
+		    <version>2.1</version>
+		</dependency>
+		
+
+		<!-- Dependency for Spring Test to be added -->
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>5.0.2.RELEASE</version>
